# Maths

./: .gitignore  README.md
Algorithms/from x to y/: algorithm.cpp  test.cpp
Algorithms/reverse sort/: data.json  list.json  metrics.py  reverse_sorter.py  reverse_sorter_test.py  test.py  utilities.py  v1.py  (+1 more)
Automata/: README.md  build.sh  gui.sh  html.js  link.sh  run.sh  script.sh
Decision Theory/: __init__.py  app.py  comparision.py  episodes.npy  flake.nix  flask.py  game.py  mdp.py  pyproject.toml  shell.nix  sprites.py  train_q_learinng_agent.py
Decision Theory/envs/: __init__.py  constants.py  floor.py  grid.py  grid_world.py  item.py  sprites.py  tile.py  wall.py
Decision Theory/envs/tiles/: floor.py  item.py  tile.py  wall.py
Decision Theory/envs/ui/: training_room.py
Decision Theory/q_learning/: agent.py  constants.py
FP/: main.js  run.js  run.sh  shell.nix
Grpah theory/: 5.py  6.py  7.py  compare.sh  problem.txt
Statistics/: README.md  pyproject.toml  shell.nix
Statistics/BasicEDA/: BasicEDA.ipynb
Statistics/Research/: Cargo.toml  Research.md
Statistics/Research-bp/: Research.md  Statistics Research.md
Statistics/Research-bp/chart/: index.html  variance.html
Statistics/Research-bp/src/: utils.rs
Statistics/Research/chart/: iqr.html  variance.html
Statistics/Research/src/: main.rs
Statistics/chart/: index.html  iqr.html  package-lock.json  package.json  rho.html  server.js  vite.config.js
Statistics/src/: main.rs  utils.rs
Synchronisation/: DiningSavages.py  Laundromat - old.py  diagram.wsd
Systems Control/: README.md
(+162 files in other folders)
