[tool.poetry]
name = "decision theory"
version = "0.1.0"
description = ""
authors = ["Alexander Popov <alexander.popov233@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = {extras = ["box2d"], version = "^1.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
