[tool.poetry]
name = "decision theory"
version = "0.1.0"
description = ""
authors = ["Alexander Popov <alexander.popov233@gmail.com>"]
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = {extras = ["box2d"], version = "^1.1.1"}
pygame = "^2.1.3"
flask = "^3.1.1"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
