[tool.poetry]
name = "statistics"
version = "0.1.0"
description = ""
authors = ["Alexander Popov <alexander.popov233@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
